--- a/lang/en.json
+++ b/lang/en.json
@@ -8,5 +8,24 @@
   "SPELL_BETTER.showIconsOnInventoryListHint": "Add the icons to the items on the inventory list.",
 
   "SPELL_BETTER.expandedLimited": "Use Expanded Sheet as Limited",
-  "SPELL_BETTER.expandedLimitedHint": "Show the full character sheet for users who have the Limited permission for a given Actor."
+  "SPELL_BETTER.expandedLimitedHint": "Show the full character sheet for users who have the Limited permission for a given Actor.",
+
+  "SPELL_BETTER.CastingAnd" : "Casting (And)",
+  "SPELL_BETTER.LevelOr" : "Level (Or)",
+  "SPELL_BETTER.SchoolOr" : "School (Or)",
+    "SPELL_BETTER.DurationOr" : "Duration (Or)",
+  "SPELL_BETTER.Or" : "(Or)",
+  "SPELL_BETTER._1Round" : "1 Round",
+  "SPELL_BETTER._1Minute" : "1 Minute",
+    "SPELL_BETTER._10Minutes" : "10 Minutes",
+  "SPELL_BETTER._1Hour" : "1 Hour",
+  "SPELL_BETTER.SpellLevel1" : "1st",  
+  "SPELL_BETTER.SpellLevel2" : "2nd",
+  "SPELL_BETTER.SpellLevel3" : "3rd",
+  "SPELL_BETTER.SpellLevel4" : "4th",
+  "SPELL_BETTER.SpellLevel5" : "5th",
+  "SPELL_BETTER.SpellLevel6" : "6th",
+  "SPELL_BETTER.SpellLevel7" : "7th",
+  "SPELL_BETTER.SpellLevel8" : "8th",
+  "SPELL_BETTER.SpellLevel9" : "9th"              
 }
