--- a/lang/en.json
+++ b/lang/en.json
@@ -27,5 +27,6 @@
   "SPELL_BETTER.SpellLevel6" : "6th",
   "SPELL_BETTER.SpellLevel7" : "7th",
   "SPELL_BETTER.SpellLevel8" : "8th",
-  "SPELL_BETTER.SpellLevel9" : "9th"              
+  "SPELL_BETTER.SpellLevel9" : "9th" ,
+  "SPELL_BETTER.Experience" : "Experience"             
 }
