--- a/lang/en.json
+++ b/lang/en.json
@@ -10,7 +10,8 @@
   "SPELL_BETTER.expandedLimited": "Use Expanded Sheet as Limited",
   "SPELL_BETTER.expandedLimitedHint": "Show the full character sheet for users who have the Limited permission for a given Actor.",
 
-  "SPELL_BETTER.CastingAnd" : "Casting (And)",
+  "SPELL_BETTER.CastingTime" : "Usage (Or)",
+  "SPELL_BETTER.OtherAnd" : "Other (And)",
   "SPELL_BETTER.LevelOr" : "Level (Or)",
   "SPELL_BETTER.SchoolOr" : "School (Or)",
     "SPELL_BETTER.DurationOr" : "Duration (Or)",
