--- a/lang/en.json
+++ b/lang/en.json
@@ -32,7 +32,8 @@
   "SPELL_BETTER.Experience" : "Experience"     ,
   "SPELL_BETTER.Print" : "Print"   ,
   "SPELL_BETTER.Category.Spellbook" : "Spellbook",
-  "SPELL_BETTER.Category.Wanted" : "Wanted"     ,
+  "SPELL_BETTER.Category.Wanted" : "Wanted" ,
+  "SPELL_BETTER.Category.All" : "All",
   "SPELL_BETTER.AddCustomCategory.LINK" : "Add Custom Category",
   "SPELL_BETTER.EditSpell" : "Edit Spell",
   "SPELL_BETTER.DeleteSpell" : "Delete Spell"
