--- a/lang/en.json
+++ b/lang/en.json
@@ -37,9 +37,10 @@
   "SPELL_BETTER.AddCustomCategory.LINK" : "Add Custom Category",
   "SPELL_BETTER.NewCategory.TITLE" : "Create New Spell Category",
   "SPELL_BETTER.NewCategory.NAME" : "Category Name",
-    "SPELL_BETTER.NewCategory.FilterSet.LABEL" : "Filter Set",  
-  "SPELL_BETTER.NewCategory.UseCategory.NAME" : "Filter by category",
-  "SPELL_BETTER.NewCategory.UseCategory.HINT" : "Apply this category to any spell you move to/create in this category so it will only show up here",      
+    "SPELL_BETTER.NewCategory.Filter.LABEL" : "Filter",  
+    "SPELL_BETTER.NewCategory.Filter.HINT" : "Pick a standard filter",
+  "SPELL_BETTER.NewCategory.IncludeInStandard.NAME" : "Include in standard",
+  "SPELL_BETTER.NewCategory.IncludeInStandard.HINT" : "If checked (the default), spells in this category are also shown in other standard views.<br>If unchecked, a spell moved to this category will only show here and in the <strong>All</strong> category.",      
   "SPELL_BETTER.EditSpell" : "Edit Spell",
   "SPELL_BETTER.DeleteSpell" : "Delete Spell"
 }
