--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,8 @@
   "SPELL_BETTER.AddCustomCategory.LINK" : "Add Custom Category",
   "SPELL_BETTER.DeleteCustomCategory.LINK" : "Delete Custom Category",
   "SPELL_BETTER.Del" : "Del",
+  "SPELL_BETTER.MoveCategoryUp" : "Move Category Up",
+  "SPELL_BETTER.MoveCategoryDown" : "Move Category Down",  
   "SPELL_BETTER.NewCategory.TITLE" : "Create New Spell Category",
   "SPELL_BETTER.NewCategory.NAME" : "Category Name",
     "SPELL_BETTER.NewCategory.Filter.LABEL" : "Filter",  
