--- a/lang/en.json
+++ b/lang/en.json
@@ -40,20 +40,22 @@
   "SPELL_BETTER.Rituals" : "Rituals",
   "SPELL_BETTER.Experience" : "Experience"     ,
   "SPELL_BETTER.Print" : "Print"   ,
-  "SPELL_BETTER.Category.Spellbook" : "Spellbook",
+  "SPELL_BETTER.Category.Spellbooks" : "Spellbooks",
   "SPELL_BETTER.Category.Wanted" : "Wanted" ,
   "SPELL_BETTER.Category.All" : "All",
-  "SPELL_BETTER.AddCustomCategory.LINK" : "Add Custom Category",
-  "SPELL_BETTER.DeleteCustomCategory.LINK" : "Delete Custom Category",
-  "SPELL_BETTER.Del" : "Del",
-  "SPELL_BETTER.MoveCategoryUp" : "Move Category Up",
-  "SPELL_BETTER.MoveCategoryDown" : "Move Category Down",  
-  "SPELL_BETTER.NewCategory.TITLE" : "Create New Spell Category",
-  "SPELL_BETTER.NewCategory.NAME" : "Category Name",
+  "SPELL_BETTER.AddCustom.LINK" : "Add Custom View or Spellbook",
+  "SPELL_BETTER.DeleteCustom.LINK" : "Delete Custom",
+  "SPELL_BETTER.DeleteCustom.TOOLTIP" : "Del",
+  "SPELL_BETTER.MoveCategoryUp" : "Move Up",
+  "SPELL_BETTER.MoveCategoryDown" : "Move Down",  
+  "SPELL_BETTER.NewCategory.TITLE" : "Add Custom View or Spellbook",
+  "SPELL_BETTER.NewCategory.NAME" : "Name",
     "SPELL_BETTER.NewCategory.Filter.LABEL" : "Filter",  
-    "SPELL_BETTER.NewCategory.Filter.HINT" : "Pick a standard filter (optional)",
-  "SPELL_BETTER.NewCategory.ShowOnlyInCategory.NAME" : "Show only in category",
-  "SPELL_BETTER.NewCategory.ShowOnlyInCategory.HINT" : "If unchecked (the default), spells in this category are also shown in other standard views. If checked, a spell moved to this category will only show here and in the <strong>All</strong> category.",      
+    "SPELL_BETTER.NewCategory.Filter.HINT" : "Instead of dragging spells, you can filter available spells (for example, Concentration spells)",
+  "SPELL_BETTER.NewCategory.ViewOrSpellbook.NAME" : "View or Spellbook",
+  "SPELL_BETTER.NewCategory.ViewOrSpellbook.HINT" : "View: Create a custom view (for example, <strong>Utility</strong>) and drag spells here. They will still show in other views.<br>Spellbook: Create a custom spellbook (for example, <strong>From dead mage</strong>). Spells you create or drag here will not show anywhere else except <strong>All</strong>",
+  "SPELL_BETTER.NewCategory.ViewOrSpellbook.VIEW" : "View",
+    "SPELL_BETTER.NewCategory.ViewOrSpellbook.SPELLBOOK" : "Spellbook",
   "SPELL_BETTER.EditSpell" : "Edit Spell",
   "SPELL_BETTER.DeleteSpell" : "Delete Spell"
 }
